--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^3.0.4",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.3",
+    "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
